--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
+    "clsx": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
     "next": "14.0.4",
     "nodemailer": "^6.9.8",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
