--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGO_URL=mongodb+srv://stephenchinag:BXgohxoYmazkC0yb@cluster0.9foxtoo.mongodb.net/
 TOKEN_SECRET=HighTable
 DOMAIN=http://localhost:3000
+NEXT_PUBLIC_WEATHER_KEY="a693fb80205a2a0c4661350f7d698afe"
