--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
+    "date-fns": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
     "next": "14.0.4",
@@ -20,6 +21,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-query": "^3.39.3",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
