--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
     "date-fns": "^3.2.0",
+    "jotai": "^2.6.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
     "next": "14.0.4",
